<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff8f8f8"
    tools:context=".ui.ScanBluetoothActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bluetooth_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/search_bl"
            android:layout_marginBottom="18dp" />

        <TextView
            android:id="@+id/search_bl"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/cmm_click_selector"
            android:gravity="center"
            android:text="@string/str_bl_search_for_a_device"
            android:textColor="#ffffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/no_found_dev"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F8F8"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="51dp"
            android:src="@mipmap/bluetooth" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="51dp"
            android:text="@string/str_bl_the_device_isnot_found"
            android:textColor="#ff333333"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rescan_dev"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:paddingStart="48dp"
            android:paddingEnd="48dp"
            android:background="@drawable/rescan_shape_bg"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/str_bl_search_again"
            android:textColor="#ffffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scanning_container"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:background="#F8F8F8">

        <ImageView
            android:id="@+id/scanning_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/scanning" />
    </LinearLayout>
</FrameLayout>