<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ble_root"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginStart="13dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="13dp"
    android:background="@drawable/blue_item_shape_bg">

    <TextView
        android:id="@+id/blue_id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/str_bl_device_id"
        android:textColor="#ff666666"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/blue_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:maxWidth="120dp"
        android:textColor="#ff333333"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blue_id_title"
        tools:text="9876543210" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="blue_id_title,blue_id" />

    <TextView
        android:id="@+id/signal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/str_bl_signal_strength"
        android:textColor="#ff666666"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/barrier1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signal_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:textColor="#ff333333"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/barrier1"
        app:layout_constraintTop_toBottomOf="@+id/signal_title"
        tools:text="80%" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="signal_title,signal_val" />

    <View
        android:id="@+id/fill_v"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toStartOf="@+id/connect_dev"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/barrier2" />

    <TextView
        android:id="@+id/connect_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/str_bl_connected"
        android:textColor="#D6972C"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/unbind"
        app:layout_constraintStart_toEndOf="@+id/fill_v"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unbind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:focusable="true"
        android:gravity="center"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:text="@string/str_bl_space_untie"
        android:textColor="#666666"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/connect_dev"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>